<resources>
    <string name="app_name">LivoxSpeechRecognition</string>
    <string name="play">Play</string>
    <string name="minimum_utterance_length">Minimum utterance length:</string>
    <string name="silence_timeout">Silence Timeout:</string>
    <string name="tts">TTS:</string>
    <string name="language">Language:</string>
    <string name="amount_of_results">Amount of results</string>
    <string name="reload_engine">Reload Engine</string>
    <string name="hello_world">Hello, World!</string>
    <string name="edit_tts">Edit TTS</string>
    <string name="speak">speak</string>
    <string name="select_engine">Select engine:</string>
    <string name="select_language">Select language:</string>
    <string name="text_to_speak">Text to speak:</string>
    <string name="select_voice">Select voice:</string>
    <string name="use_frontal_speaker">Use frontal speaker:</string>
    <string name="mute_while_listening">Mute while listening:</string>
</resources>
